import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
}

group = project.property('pluginGroup')
version = project.property('pluginVersion')

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        name = 'codemc'
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.20.4-R0.1-SNAPSHOT'
    compileOnly group: 'com.griefcraft', name: 'lwc', version: '2.4.1'
}

processResources {
    filter ReplaceTokens, tokens: [version: version]
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}
